--- a/config
+++ b/config
@@ -2,3 +2,6 @@ Host *
   UseKeychain yes
   AddKeysToAgent yes
   IdentityFile ~/.ssh/id_ed25519
+Host github.com
+  Hostname ssh.github.com
+  Port 443
